New draft with most images in place (some bitmaps will be replaced) Bitmap images will also be made larger to be easier to read Various other image manipulations

--- a/text/s1-c03-object-types.textile
+++ b/text/s1-c03-object-types.textile
@@ -6,7 +6,7 @@ All of these types of objects are stored in the Git *Object Database*, which is 
 
 To demonstrate these examples, we will develop a small ruby library that provides very simple bindings to Git, keeping the project in a Git repository.  The basic layout of the project is this:
 
-!s1/layout.png!
+!vector/Layout.eps!
 
 Let's take a look at what Git does when this is committed to a repository.
 
@@ -14,11 +14,11 @@ h3. The Blob
 
 In Git, the contents of files are stored as *blobs*.
 
-!s1/blobs.png!
+!vector/Blobs.eps!
 
 It is important to note that it is the _contents_ that are stored, not the files.  The names and permissions of the files are not stored with the blob, just the contents.  
 
-!s1/blob-expand.png!
+!vector/Blob_Expand.eps!
 
 This means that if you have two files anywhere in your project that are exactly the same, even if they have different names, Git will only store the blob once.  This also means that during repository transfers, such as clones or fetches, Git will only transfer the blob once, then expand it out into multiple files upon checkout.
 
@@ -26,35 +26,35 @@ h3. The Tree
 
 Directories in Git basically correspond to *trees*.  
 
-!s1/trees.png!
+!vector/Trees.eps!
 
 A tree is a simple list of trees and blobs that the tree contains, along with the names and permissions of those trees and blobs.  The contents section of a tree object consists of a very simple text file that lists the _mode_, _type_, _name_ and _sha_ of each entry.
 
-!s1/tree-expand.png!
+!vector/Tree_Expand.eps!
 
 
 h3. The Commit
 
 So, now that we can store arbitrary trees of content in Git, where does the 'history' part of 'tree history storage system' come in?  The answer is the *commit* object.
 
-!s1/commit.png!
+!vector/Commit.eps!
 
 The commit is very simple, much like the tree.  It simply points to a tree and keeps an _author_, _committer_, _message_ and any _parent_ commits that directly preceded it.  
 
-!s1/commit-expand.png!
+!vector/Commit_Expand.eps!
 
 Since this was my first commit, there are no parents.  If I commit a second time, the commit object will look more like this:
 
-!s1/commit-expand2.png!
+!vector/Commit_Expand2.eps!
 
 Notice how the _parent_ in that commit is the same SHA1 value of the last commit we did?  Most times a commit will only have a single parent like that, but if you merge two branches, the next commit will point to both of them.
 
-note. the current record for number of commit parents in the Linux kernel is 12 - _12_ branches merged in a single commit 
+note. The current record for number of commit parents in the Linux kernel is 12 branches merged in a single commit!
 
 h3. The Tag
 
 The final type of object you will find in a Git database is the *tag*.  This is an object that provides a permanent shorthand name for a particular commit.  It contains an _object_, _type_, _tag_, _tagger_ and a _message_. Normally the _type_ is a 'commit' and the _object_ is the SHA1 of the commit you're tagging.  The tag can also be GPG signed, providing cryptographic integrity to a release or version.
 
-!s1/tag-expand.png!
+!vector/Tag_Expand.eps!
 
 We'll talk a little bit more about tags and how they differ from _branches_ (which also point to commits, but are not stored as objects) in the next section, where we'll pull all of this together into how all these objects relate to each other conceptually.
