--- a/text/s4-c00-references.textile
+++ b/text/s4-c00-references.textile
@@ -2,7 +2,7 @@ h1. References and Endnotes
 
 Here are some references that I used or that you may use to find out more about Git.
 
-The example git repository that I was working with throughout this book can be cloned from it's 
+The example git repository that I was working with throughout this book can be cloned from its 
 "GitHub repository":http://github.com/schacon/simplegit
 
 For anything you cannot find in this book or these references, be sure to ask the fantastic people hanging out at the
