--- a/text/s2-c02-getting-a-git-repo.textile
+++ b/text/s2-c02-getting-a-git-repo.textile
@@ -21,7 +21,7 @@ This will add all of your current files into your new repository and index and t
 
 h3. Cloning a Repository
 
-Many times you will be _cloning_ a repository, however.  This means that you are creating a complete copy of another repo, including all of it's history and published branches. 
+Many times you will be _cloning_ a repository, however.  This means that you are creating a complete copy of another repo, including all of its history and published branches. 
 
 note.  A clone is, for all intents and purposes, a full backup.  If the server that you cloned from has a hard disk failure or something equally catastrophic, you can basically take any of the clones and stick it back up there when the server is restored without anyone really the worse for wear.
 
