--- a/text/s2-c05-browsing-git.textile
+++ b/text/s2-c05-browsing-git.textile
@@ -6,11 +6,11 @@ todo. sidebar:c5-git-browsing.textile
 
 h3. Showing Objects
 
-The 'git show' command is really useful for presenting any of the objects in a very human readable format.  Running this command on a file will simply output the contents of the file.  Running it on a tree will just give you the filenames of the contents of that tree, but none of it's subtrees.  Where it's most useful is using it to look at commits.
+The 'git show' command is really useful for presenting any of the objects in a very human readable format.  Running this command on a file will simply output the contents of the file.  Running it on a tree will just give you the filenames of the contents of that tree, but none of its subtrees.  Where it's most useful is using it to look at commits.
 
 h4. Showing Commits
 
-If you call it on a tree-ish that is a commit object, you will get simple information about the commit (the author, message, date, etc) and a diff of what changed between that commit and it's parents.
+If you call it on a tree-ish that is a commit object, you will get simple information about the commit (the author, message, date, etc) and a diff of what changed between that commit and its parents.
 
 shell. git-show-commit.txt
 
@@ -20,7 +20,7 @@ Instead of the 'git show' command, it's generally more useful to use the lower l
 
 shell. git-lstree1.txt
 
-You can also run this command recursively, so you can see all the subtrees as well.  This is a great way to get the sha of any blob anywhere in the tree without having to walk it one node at a time.  
+You can also run this command recursively, so you can see all the subtrees as well.  This is a great way to get the SHAof any blob anywhere in the tree without having to walk it one node at a time.  
 
 shell. git-lstree2.txt
 
@@ -28,7 +28,7 @@ The '-t' makes it also show the shas of the subtrees themselves, rather than jus
 
 h4. Showing Blobs
 
-Lastly, you may want to extract the contents of individual blobs.  The 'cat-file' command is an easy way to do that, and can also serve to let you know what type of object a sha is, if you happen to not know.  It is sort of a catch-all command that you can use to inspect objects.
+Lastly, you may want to extract the contents of individual blobs.  The 'cat-file' command is an easy way to do that, and can also serve to let you know what type of object a SHAis, if you happen to not know.  It is sort of a catch-all command that you can use to inspect objects.
 
 shell. git-catfile.txt
 
